--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
     <h1>Cesar's Portfolio My first Test</h1>
     <img src="./robot.jpg"/>
+    <ul>
+        <li>Arctos</li>
+        <li>Collarus</li>
+        <li>Horribilis</li>
+        <li>Nelsoni (extinct)</li>
+      </ul>
 </html>
