--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
-    <h1>Cesar's Portfolio My first Test</h1>
+    <h1>Git Hub First Web Page Instructions</h1>
     <img src="./robot.jpg"/>
-    <ul>
-        <li>Arctos</li>
-        <li>Collarus</li>
-        <li>Horribilis</li>
-        <li>Nelsoni (extinct)</li>
-      </ul>
+    <h2>
+        Sign Up into GitHub
+    </h2>
+    <ol>
+        <li>Enter Email</li>
+        <li>Create Password</li>
+        <li>Enter a User Name</li>
+        <li>Choose Product Updates</li>
+      </ol>
+      <img src="./SignUpGitHub.JPG"/>
 </html>
