--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
         <li>Create Password</li>
         <li>Enter a User Name</li>
         <li>Choose Product Updates</li>
-      </ol>
-      <img src="./SignUpGitHub.JPG"/>
+    </ol>
+    <img src="./SignUpGitHub.JPG"/>
+    <br>
+    <h2>
+        Create New Repository
+    </h2>
+    <ol>
+        <li>Enter Repository Name "username.github.io"</li>
+        <li>Optional Description</li>
+        <li>Press Create Repository</li>
+        <img src="./CreateRepository.JPG"/>
+        
+    </ol>
 </html>
