--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<head>
+    <link href='configuration.css' rel='stylesheet'>
+</head>
+
     <h1>Git Hub First Web Page Instructions</h1>
     <img src="./robot.jpg"/>
     <h2>
@@ -20,6 +24,17 @@
         <li>Optional Description</li>
         <li>Press Create Repository</li>
         <img src="./CreateRepository.JPG"/>
+        
+    </ol>
+    <br>
+    <h2>
+        Create Index.html and files neede for your web page all in one file
+    </h2>
+    <ol>
+        <li>Create index.html file</li>
+        <li>Creat all other files needed in the same folder</li>
+        <li>Drag and Drop to GitHub Add files</li>
+        <img src="./uploadfiles.JPG"/>
         
     </ol>
 </html>
