--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
     <h1>Git Hub First Web Page Instructions</h1>
-    <img src="./robot.jpg"/>
+    <img src="./robot.jpg" class="center"/>
     <h2>
         Sign Up into GitHub
     </h2>
@@ -14,7 +14,7 @@
         <li>Enter a User Name</li>
         <li>Choose Product Updates</li>
     </ol>
-    <img src="./SignUpGitHub.JPG"/>
+    <img src="./SignUpGitHub.JPG" class="center"/>
     <br>
     <h2>
         Create New Repository
@@ -23,7 +23,7 @@
         <li>Enter Repository Name "username.github.io"</li>
         <li>Optional Description</li>
         <li>Press Create Repository</li>
-        <img src="./CreateRepository.JPG"/>
+        <img src="./CreateRepository.JPG" class="center"/>
         
     </ol>
     <br>
@@ -34,7 +34,7 @@
         <li>Create index.html file</li>
         <li>Creat all other files needed in the same folder</li>
         <li>Drag and Drop to GitHub Add files</li>
-        <img src="./uploadfiles.JPG"/>
+        <img src="./uploadfiles.JPG" class="center"/>
         
     </ol>
 </html>
