--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <h2>
         Sign Up into GitHub
     </h2>
-    <ol>
-        <li>Enter Email</li>
-        <li>Create Password</li>
-        <li>Enter a User Name</li>
-        <li>Choose Product Updates</li>
-    </ol>
+    <div class="container">
+        <ol class="myOL">
+            <li>Enter Email</li>
+            <li>Create Password</li>
+            <li>Enter a User Name</li>
+            <li>Choose Product Updates</li>
+        </ol>
+    </div>
+    
     <img src="./SignUpGitHub.JPG" class="center"/>
     <br>
     <h2>
