--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <link href='configuration.css' rel='stylesheet'>
 </head>
-<boy>
+<body>
     <h1>Git Hub First Web Page Instructions</h1>
     <img src="./robot.jpg" class="center"/>
     <h2>
@@ -47,7 +47,7 @@
         </ol>
     </div>
     <img src="./uploadfiles.JPG" class="center"/>
-</boy>
+</body>
 
     
 </html>
